--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="root"></div>
     
     <script type="text/babel" src="utils/data.js"></script>
-  
+    <script type="text/babel" src="utils/prompt-generator.js"></script>
     <script type="text/babel" src="components/Header.js"></script>
     <script type="text/babel" src="components/ModuleSelector.js"></script>
     <script type="text/babel" src="components/FormGenerator.js"></script>
